namespace Business
{
    public interface IObserver
    {
       public void Update() { }
    }
}