@startuml

Product--*ProductCollection
IProductCollection--|>ProductCollection
ContainbleItem--*ProductCollection
IObserver--|>Dispenser
IObservable--|>PaymentTerminal
ProductCollection --o Dispenser
PaymentTerminal --"Notify" Dispenser

class Product{
    -Name
    #Price
}

class ProductCollection{
    -products
}

class ContainbleItem{
    +Row
    +Column
    +Count
}

interface IProductCollection{
    +Add()
    +Remove()
    +GetItem()
    +Count()
}

interface IObserver{
    +Update()
}

class Dispenser{
    -products
    +ExtractItem()
    +DeliverItem()
    
}

interface IObservable{
    +Add()
    +Remove()
    +Notify()
}

class PaymentTerminal{
    +AddCoins()
    +AddCash()
    +VerifyTransaction(price)
}


@enduml